# accounting-agent

./: .dockerignore  .env.example  .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  pyproject.toml  tsconfig.base.json
.github/workflows/: contracts-check.yml
apps/: .gitkeep
apps/api/: .gitkeep
apps/cli/: .gitkeep
apps/desktop-shell/: .gitkeep  package.json
apps/desktop-shell/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop-shell/src-tauri/src/: main.rs
apps/desktop-ui/: .env.example  .gitkeep  next.config.js  package.json  tsconfig.json
apps/worker/: .gitkeep
docs/evaluation/: .gitkeep
docs/setup/: .gitkeep  desktop-packaging.md
infra/: .gitkeep  alembic.ini
infra/alembic/: .gitkeep  env.py
infra/docker/: .gitkeep  api.Dockerfile  docker-compose.yml  worker.Dockerfile
infra/otel/: .gitkeep  otel-collector.yaml
infra/scripts/: .gitkeep  _lib.sh  backup-demo.sh  bootstrap-demo.sh  generate-ts-sdk.sh  healthcheck-demo.sh  package-desktop.sh  render-supabase-schema.sh  restore-demo.sh  seed-demo.sh  start-demo.sh
infra/sql/: supabase-bootstrap.sql
services/: .gitkeep
services/accounting/: __init__.py  dimensions.py  journal_drafts.py  policies.py  preprocess.py  recommendation_apply.py  rules.py
services/accounting-engine/: .gitkeep
services/accounting_engine/: __init__.py
services/agents/: __init__.py  accounting_context.py  accounting_toolset.py  context.py  kernel.py  models.py  policy.py  registry.py
services/audit/: __init__.py  events.py  service.py
services/auth/: __init__.py  api_tokens.py  passwords.py  service.py  sessions.py
services/chat/: __init__.py  action_execution.py  action_models.py  action_router.py  continuation_state.py  grounding.py  job_continuation.py  message_events.py  operator_memory.py  proposed_changes.py  service.py
services/close_runs/: __init__.py  delete_service.py  gates.py  operating_mode.py  service.py  workflow_guards.py
services/coa/: __init__.py  fallback_nigerian_sme.py  importer.py  service.py
services/common/: __init__.py  enums.py  logging.py  readiness.py  runtime_checks.py  settings.py  types.py
services/contracts/: __init__.py  api_models.py  auth_models.py  chat_models.py  close_run_models.py  coa_models.py  document_ai_models.py  document_models.py  domain_models.py  entity_models.py  export_models.py  job_models.py  journal_models.py  ledger_models.py  ownership_models.py  quickbooks_models.py  recommendation_models.py  report_models.py  (+3 more)
tests/: .gitkeep  conftest.py
(+425 files in other folders)
