[build-system]
requires = ["hatchling>=1.27,<2.0"]
build-backend = "hatchling.build"

[project]
name = "accounting-ai-agent"
version = "0.1.0"
description = "Canonical Python workspace for the Accounting AI Agent local demo."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Accounting AI Agent Team" },
]
dependencies = [
  "alembic>=1.17,<2.0",
  "celery>=5.5,<6.0",
  "fastapi>=0.135,<0.136",
  "httpx>=0.28,<0.29",
  "langgraph>=1.1,<1.2",
  "minio>=7.2,<8.0",
  "opentelemetry-api>=1.38,<2.0",
  "opentelemetry-exporter-otlp>=1.38,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.59b0,<1.0",
  "opentelemetry-instrumentation-logging>=0.59b0,<1.0",
  "opentelemetry-sdk>=1.38,<2.0",
  "pydantic>=2.11,<3.0",
  "pydantic-ai>=1.78,<2.0",
  "pydantic-settings>=2.11,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=6.4,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "structlog>=25.4,<26.0",
  "tenacity>=9.1,<10.0",
  "uvicorn[standard]>=0.38,<0.39",
]

[dependency-groups]
dev = [
  "mypy>=1.18,<2.0",
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.2,<2.0",
  "pytest-cov>=7.0,<8.0",
  "ruff>=0.14,<0.15",
]

[tool.hatch.build]
include = [
  "apps/**/*.py",
  "services/**/*.py",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "services", "tests"]

[tool.ruff.lint]
select = [
  "ASYNC",
  "B",
  "E",
  "F",
  "I",
  "N",
  "RUF",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
